# KotlinJNIExample

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/android/kotlinjniexample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: example.cpp  example.h
app/src/main/java/com/example/android/kotlinjniexample/: Example.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/android/kotlinjniexample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
